<resources>

    <string name="app_name">SRN OE</string>
    <string name="action_settings">Definições</string>
    <string name="action_sortby">Filtrar por</string>
    <string name="title_activity_view_new">ViewNew</string>
    <string name="action_contacts">Contactos</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notificacoes">Notificações:</string>
    <string name="titulonoticia">Titulo da Noticia</string>
    <string name="irparabrowser">Go to Browser</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</string>
    <string name="data_tweet">12/34</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_gps">Maps</string>
    <string name="facebook_app_id">950763668301190</string>
    <string name="partilhar">Partilhar</string>
    <string name="imgDescpt">Imagem da notícia</string>
    <string name="favCD">Marcar como favorito</string>
    <string name="shareCD">Partilhar</string>
    <string name="eventCD">Marcar na agenda</string>
    <string name="action_shareapp">Partilhar Aplicação</string>

</resources>
