<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#212121">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleTV"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/favIB"
            android:padding="5dp"
            android:text="@string/titulonoticia"
            android:textStyle="bold"
            android:typeface="normal"
            android:textSize="15sp"
            android:background="#212121"
            android:textColor="#F3F3F3"
            android:maxLines = "2"
            android:scrollbars = "vertical"
            android:layout_toLeftOf="@+id/favIB" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favIB"
            android:background="@mipmap/ic_action_important"
            android:contentDescription="@string/partilhar"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toLeftOf="@+id/shareIB"
            android:layout_toStartOf="@+id/shareIB"
            android:layout_centerVertical="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shareIB"
            android:background="@drawable/share_button2"
            android:contentDescription="@string/partilhar"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toLeftOf="@+id/browserIB"
            android:layout_toStartOf="@+id/browserIB"
            android:layout_centerVertical="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/browserIB"
            android:background="@drawable/browser_button"
            android:contentDescription="@string/irparabrowser"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>


    <WebView
        android:id="@+id/newWV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
